join, list, rooms, changed method signatures, server state, cool byte sequence checker method.

--- a/src/Arg.Hosting.Sdk/Arg.Hosting.Sdk.csproj
+++ b/src/Arg.Hosting.Sdk/Arg.Hosting.Sdk.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+  </PropertyGroup>
+
 </Project>
