--- a/src/Arg.Hosting.Demo.BasicTelnet/Arg.Hosting.Demo.BasicTelnet.csproj
+++ b/src/Arg.Hosting.Demo.BasicTelnet/Arg.Hosting.Demo.BasicTelnet.csproj
@@ -11,4 +11,10 @@
     <ProjectReference Include="..\Arg.Hosting\Arg.Hosting.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestMovie.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
